@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.3 2003/03/29 12:42:25 jmmv Exp $
+# $NetBSD: Makefile,v 1.4 2003/04/13 13:50:14 cjep Exp $
 #
 
-DISTNAME=	smimemsg141
-PKGNAME=	smimemsg-1.4.1
+DISTNAME=	smimemsg15
+PKGNAME=	smimemsg-1.5
 WRKSRC=		${WRKDIR}/smimemsg
 CATEGORIES=	security
 MASTER_SITES=	http://mars.elcom.nitech.ac.jp/security/
