@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.3 2001/08/17 05:58:08 jun Exp $
+$NetBSD: distinfo,v 1.4 2003/04/13 13:50:14 cjep Exp $
 
-SHA1 (smimemsg141.tar.gz) = 6197d2b7f1827d5c9ff1de8be8d0c3c91347e20b
-Size (smimemsg141.tar.gz) = 477100 bytes
+SHA1 (smimemsg15.tar.gz) = 1fd6e3085c5ad08786d26b22bec1699816903073
+Size (smimemsg15.tar.gz) = 647196 bytes
